# hobbits-rs

./: Cargo.toml  LICENSE  README.md
src/: codec.rs  lib.rs  main.rs  tcp.rs
src/encoding/: codec.rs  envelope.rs  marshal.rs  message.rs  mod.rs  unmarshal.rs
src/server/: mod.rs  tcp.rs
