[package]
name = "hobbits"
version = "0.1.0"
authors = ["Kevin Kelley <kevin@kelleysoft.com>"]
edition = "2018"
description = "Implementation of the Hobbits protocol for Rust"
homepage = "https://github.com/KevinKelley/hobbits-rs"
repository = "https://github.com/KevinKelley/hobbits-rs"
readme = "README.md"
license = "MIT/Apache-2.0"
include = [
    "**/*.rs",
    "Cargo.toml"
]

[dependencies]
tokio = "0.1.21"
getopts = "0.2"
hex = "0.3.2"
serde = { version = "1.0", features = ["derive"] }

# serde_json is just for the example, not required in general
serde_json = "1.0"


# [build-dependencies]
# [dev-dependencies]
# [features]
#debug_msgs = []
