[package]
name = "hobbits"
version = "0.1.0"
authors = ["Kevin Kelley <kevin@kelleysoft.com>"]
edition = "2018"
description = "Implementation of the Hobbits protocol for Rust"
homepage = "https://github.com/KevinKelley/hobbits-rs"
repository = "https://github.com/KevinKelley/hobbits-rs"
readme = "README.md"
license = "MIT/Apache-2.0"
include = [
    "**/*.rs",
    "Cargo.toml"
]

[dependencies]
getopts = "0.2"
hex = "0.3.2"
bytes = "0.4"
# log = "0.4"
# mio = "0.6.12"
# scoped-tls = "0.1.0"
# iovec = "0.1"
tokio = "0.1.21"
tokio-core = "0.1.17"
tokio-io = "0.1"
tokio-executor = "0.1.2"
tokio-reactor = "0.1.1"
tokio-timer = "0.2.1"
futures = "0.1.21"
